--- a/H_팀과제/H_팀과제.html
+++ b/H_팀과제/H_팀과제.html
@@ -19,23 +19,137 @@
             <div class="H_H">
                 <img class="H_LOGO" src="/H_팀과제/H_LOGO.png" />
                 <div class="Search">
-                    <input type="text" placeholder="Search" maxlength="10" />
+                    <input id="Search_in" type="text" placeholder="Search" maxlength="10" />
+                    <img class="H_D" src="H_돋보기.PNG" />
+                </div>
+                <div class="right-head">
+                    <ul class="top-menu">
+                        <li><a href="#">로그인</a></li>
+                        <img class="H_login" src="H_login.png" />
+                        <li><a href="#">장바구니</a></li>
+                        <img class="H_장바구니" src="H_장바구니.PNG" />
+                    </ul>
+                </div>
+            </div>
+            <ul class="list_menu">
+                <img id="menu_list" src="../H_팀과제/H_list.PNG" />
+                <li><a href="#">홈</a></li>
+                <li><a href="#">차량용품</a></li>
+                <li><a href="#">라이프</a></li>
+                <li><a href="#">현대브랜드관</a></li>
+                <li><a href="#">For Owner</a></li>
+                <li><a href="#">현대샵소개</a></li>
+                <li><a href="#">블루링크스토어</a></li>
+            </ul>
+        </div>
+
+        <div class="H_midle">
+            <img class="H_midle1" src="../H_팀과제/H_midle.jpg" />
+        </div>
+
+        <div id="main">
+            <div id="contents1">
+                <img class="contentsa" src="../H_팀과제/H_ch.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_DA.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_MM.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_DDD.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_DDDD.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_DDDDD.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_AAA.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_SS.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_SSS.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_LG.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_OO.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_CCC.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_TT.jpg" />
+                <img class="contentsa" src="../H_팀과제/H_BL.jpg" />
+            </div>
+
+            <div id="contents2">
+                <img class="contentsb" src="../H_팀과제/H2_1.jpg" />
+                <div class="title1">
+                    <ul>
+                        <li>
+                            <h4>디테일링의 새로운 제안~30%</h4>
+                        </li>
+                        <li>
+                            <p class="HD">5.28~6.29 신상품 5종 런칭 기념 할인 프로모션</p>
+                        </li>
+                        <div class="H2_product1">
+                            <img class="H2_2" src="../H_팀과제/H2_2.jpg" />
+                            <div>
+                                <span>[디테일링]V2L 커넥터 멀티탭 3구 7m</span><br />
+                                <del class="H2_M">198,000원</del><span class="H2_M1">10%</span><span>178,000원</span>
+                                <div class="별">
+                                    <img src="../H_팀과제/H_별.PNG" /><span> 5.0 / 리뷰 1건</span>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="H2_product2">
+                            <img class="H2_3" src="../H_팀과제/H2_3.jpg" />
+                            <div>
+                                <span>[디테일링]우븐블럭 마이스터 헤드레스트 목쿠션 1열 1개입</span><br />
+                                <del class="H2_M">89,000원</del><span class="H2_M1">10%</span><span>79,900원</span>
+                            </div>
+                        </div>
+                        <div class="H2_product3">
+                            <img class="H2_4" src="../H_팀과제/H2_4.jpg" />
+                            <div>
+                                <span>[디테일링]우븐블럭 씬 코일매트</span><br />
+                                <del class="H2_M">99,000원</del><span class="H2_M1">30%</span><span>69,000원</span>
+                            </div>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="contents3">
+                <img class="contentsb" src="../H_팀과제/H_Pan.jpg" />
+                <div>
+                    <span>[카고컨테이너]</span><br />
+                    <span>멀티 팬 L</span>
+                    <H3>115,000원</H3>
+
+                </div>
+                <div class="H3_1">
+                    <img class="H3_2" src="../H_팀과제/H_별.PNG" />
+                    <span> 4.5 / 리뷰 2건 </span>
                 </div>
             </div>
         </div>
-        <div class="left-head">
+
+        <div id="footer">
+            <div class="footer-inner">
+                <div class="footer-logo">
+                    <img class="footer-logo1" src="/H_팀과제/H_LOGO.png"/> 
+                </div>
+                <ul class="footer-info">
+                    <li>이용약관</li>
+                    <li>개인정보처리방침</li>
+                    <li>입점 신청</li>
+                    <li>공지사항</li>
+                    <li>FAQ</li>
+                </ul>
+            </div>
+            <h3 class="footer-info2">현대자동차 ㈜ 공식 온라인몰 HyundaiShop</h3><br />
+            <span>현대자동차㈜는 통신판매중개자로서 통신판매의 당사자가 아닙니다.<br />
+                본 HyundaiShop 사이트에서 판매되는 제3자 판매 상품 및 거래에 대한 모든 책임은 해당 판매자에게 있습니다.<br />
+                HyundaiShop 사이트 운영은 인크로스㈜가 대행하고 있습니다.<br />
+                단, 멤버십프로그램(워런티플러스 등)보증 연장 상품은 현대자동차㈜가 직접 통신판매의 당사자로 운영하고 있습니다.<br /></span>
+            <br />
+            <span>
+                - 사업자명: 현대자동차(주)
+                - 대표이사 : MUNOZ BARCELO JOSE ANTONIO
+                - 사업자등록번호 : 101-81-09147
+                - 주소 : 서울특별시 서초구 헌릉로 12(양재동)
+                - 통신판매업신고번호 : 2002-서울서초-1546 (정보확인>)
+                - 이메일 : hyundaishop_official@hyundai.com
+            </span>
+            <br />
+            <span>COPYRIGHT ⓒ HYUNDAI MOTOR COMPANY. ALL RIGHTS RESERVED.</span>
 
         </div>
-
-
-        <div id="main">
-            <div id="contents1">본문1</div>
-            <div id="contents2">본문2</div>
-            <div id="contents3">본문3</div>
-        </div>
-        <div id="footer">푸터: 회사정보, 네비</div>
-    </div>
-
 
 
 </body>
